--- a/application/views/scripts/admin/languages/index.phtml
+++ b/application/views/scripts/admin/languages/index.phtml
@@ -59,7 +59,7 @@ $this->headTitle('Languages');
 </div>
 
 <form method="post" action="<?php echo  $this->url(array('controller' => 'admin_languages', 'action' => 'delete'), 'default', true);?>" id="delete-warning-dialog" class="modal fade" tabindex="-1" role="dialog">
-    <input type="hidden" name="task" value="deletelanguage">
+    <input type="hidden" name="task" value="delete">
     <input type="hidden" name="id" value="">
   <div class="modal-dialog">
     <div class="modal-content">
