--- a/application/views/scripts/admin/covers/index.phtml
+++ b/application/views/scripts/admin/covers/index.phtml
@@ -1,14 +1,12 @@
 <?php
-
 $this->headTitle('Covers');
-
 ?>
 <div class="page-header">
-  <h1>Covers</h1>
+    <h1>Covers</h1>
 </div>
 <div class="row">
     <div class="coll-lg-12">
-        <?php echo $this->systemMessagesHtml($this->systemMessages); ?>
+<?php echo $this->systemMessagesHtml($this->systemMessages); ?>
     </div>
 </div>
 <div class="row">
@@ -20,162 +18,159 @@ $this->headTitle('Covers');
                     <button data-action="toggle-sort" class="btn btn-default"><i class="glyphicon glyphicon-list"></i> Change order</button>
                     <a 
                         href="<?php echo $this->url(array('controller' => 'admin_covers', 'action' => 'add'), 'default', true) ?>" 
-                       class="btn btn-default"
-                       ><i class="glyphicon glyphicon-plus"></i> Add Cover</a>
+                        class="btn btn-default"
+                        ><i class="glyphicon glyphicon-plus"></i> Add Cover</a>
                 </div>
             </div>
             <div class="panel-body">
-                                <table id="rows-table" class="table table-striped table-hover">
-					<thead>
-						<tr>
+                <table id="rows-table" class="table table-striped table-hover">
+                    <thead>
+                        <tr>
                             <th></th>
-							<th>Title</th>
-							<th class="text-center">#</th>
-						</tr>
-					</thead>
-					<tbody>
-						<?php
-						foreach ($this->covers as $cover) {?>
-						
-						<tr data-cover-id="<?php echo $this->escape($cover['id']);?>">
-								<td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer;"></i></td>
-								<td><?php echo $this->escape($cover['title']); ?></td>
-								<td class="text-center">
-										<div class="btn-group btn-group-sm" role="group" aria-label="...">
-											<a href="<?php echo $this->url(array ('controller' => 'admin_covers', 'action' => 'edit', 'id' => $cover['id']), 'default', true); ?>"
-													type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
-											<button data-cover-id="<?php echo $this->escape($cover['id']);?>" data-action="delete" type="button" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
-										</div>
-								</td>
-						</tr>
-						<?php
-							}
-						?>
-					</tbody>
-				</table>
+                            <th>Title</th>
+                            <th class="text-center">#</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+<?php foreach ($this->covers as $cover) { ?>
+
+                            <tr data-cover-id="<?php echo $this->escape($cover['id']); ?>">
+                                <td class="text-center"><i data-action="sort" class="glyphicon glyphicon-list" style="display: none; cursor: pointer;"></i></td>
+                                <td><?php echo $this->escape($cover['title']); ?></td>
+                                <td class="text-center">
+                                    <div class="btn-group btn-group-sm" role="group" aria-label="...">
+                                        <a href="<?php echo $this->url(array('controller' => 'admin_covers', 'action' => 'edit', 'id' => $cover['id']), 'default', true); ?>"
+                                           type="button" class="btn btn-default" title="edit"><i class="glyphicon glyphicon-pencil"></i></a>
+                                        <button data-cover-id="<?php echo $this->escape($cover['id']); ?>" data-action="delete" type="button" class="btn btn-default" title="delete"><i class="glyphicon glyphicon-trash"></i></button>
+                                    </div>
+                                </td>
+                            </tr>
+    <?php
+}
+?>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 </div>
 
-<form method="post" action="<?php echo  $this->url(array('controller' => 'admin_covers', 'action' => 'delete'), 'default', true);?>" id="delete-warning-dialog" class="modal fade" tabindex="-1" role="dialog">
-    <input type="hidden" name="task" value="deletecover">
+<form method="post" action="<?php echo $this->url(array('controller' => 'admin_covers', 'action' => 'delete'), 'default', true); ?>" id="delete-warning-dialog" class="modal fade" tabindex="-1" role="dialog">
+    <input type="hidden" name="task" value="delete">
     <input type="hidden" name="id" value="">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Delete cover</h4>
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to delete cover?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="submit" class="btn btn-danger"><i class="glyphicon glyphicon-trash"> </i>Delete</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Delete cover</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete cover?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-danger"><i class="glyphicon glyphicon-trash"> </i>Delete</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
 </form><!-- /.modal -->
 
-<form method="post" action="<?php echo $this->url(array('controller' => 'admin_covers', 'action' => 'updateorder'), 'default', true);?>" style="display: none;" id="save-order-form">
+<form method="post" action="<?php echo $this->url(array('controller' => 'admin_covers', 'action' => 'updateorder'), 'default', true); ?>" style="display: none;" id="save-order-form">
     <input type="hidden" name="task" value="saveOrder">
     <input type="hidden" name="sorted_ids_covers" value="">
 </form>
 <?php
-
 $this->headLink()->appendStylesheet($this->baseUrl('/admin/bower_components/jquery-ui-1.12.0/jquery-ui.min.css')); // osnovni kod za dodavanje CSS-a na stranicu
 $this->inlineScript()->appendFile($this->baseUrl('/admin/bower_components/jquery-ui-1.12.0/jquery-ui.min.js')); // osnovni kod za dodavanje JS-a na stranicu
-        
 ?>
 <script>
-<?php $this->inlineScript()->captureStart(); ?>    
+<?php $this->inlineScript()->captureStart(); ?>
 
-   $('#rows-table').on('click', '[data-action="delete"]', function (e) {
-       
-       e.preventDefault();
-       e.stopPropagation();
-       
-       // calculate target element
-       var target = $(this).is('[data-action="delete"]') ? $(this) : $(this).closest('[data-action="delete"]');
-       
-       // get any attribute
-      var coverId = target.attr('data-cover-id');
-       
-       // set value for input field with name "id"
-       $('#delete-warning-dialog').find('[name="id"]').val(coverId);
-       
-       $('#delete-warning-dialog').modal('show');
-       
-   });
+    $('#rows-table').on('click', '[data-action="delete"]', function (e) {
 
-    $('[data-action="toggle-sort"]').on('click', function (e) {
-      
-       e.preventDefault();
-       e.stopPropagation();
-       
-       var target = $(this).is('[data-action="toggle-sort"]') ? $(this) : $(this).closest('[data-action="toggle-sort"]');
-       
-       var sortableTbody = $('#rows-table > tbody');
-       
-       if (target.hasClass('active')) {
-           
-           target.removeClass('active');
-           
-           target.html('<i class="glyphicon glyphicon-list"></i> Change order');
-           
-           // destroy sortable funcionality
-           sortableTbody.sortable('destroy');
-           
-           // restore old html into tbody
-           sortableTbody.html(sortableTbody.data('oldHtml'));
-           
-           // hide "handle" for sorting, the icon in first column
-           sortableTbody.find('[data-action="sort"]').hide();
-           
-           // hide "Save Order" button
-           $('[data-action="save-order"]').hide();
-           
-       } else {
-           
-           target.addClass('active');
-           
-           // method html sets or gets html inside selected element
-           target.html('<i class="glyphicon glyphicon-remove"></i> Cancel');
-           
-           // save tbody html before sorting under key "oldHtml" into its data
-           sortableTbody.data('oldHtml', sortableTbody.html());
-           
-           // initialize sortable functionality
-           sortableTbody.sortable({
-                handle: '[data-action="sort"]'
-            });
-           
-           // show "handle" for sorting, the icon in first column
-           sortableTbody.find('[data-action="sort"]').show();
-           
-           // show "Save Order" button
-           $('[data-action="save-order"]').show();
-           
-       }
-   });
-   
-   $('[data-action="save-order"]').on('click', function (e) {
-        
         e.preventDefault();
         e.stopPropagation();
-        
+
+        // calculate target element
+        var target = $(this).is('[data-action="delete"]') ? $(this) : $(this).closest('[data-action="delete"]');
+
+        // get any attribute
+        var coverId = target.attr('data-cover-id');
+
+        // set value for input field with name "id"
+        $('#delete-warning-dialog').find('[name="id"]').val(coverId);
+
+        $('#delete-warning-dialog').modal('show');
+
+    });
+
+    $('[data-action="toggle-sort"]').on('click', function (e) {
+
+        e.preventDefault();
+        e.stopPropagation();
+
+        var target = $(this).is('[data-action="toggle-sort"]') ? $(this) : $(this).closest('[data-action="toggle-sort"]');
+
+        var sortableTbody = $('#rows-table > tbody');
+
+        if (target.hasClass('active')) {
+
+            target.removeClass('active');
+
+            target.html('<i class="glyphicon glyphicon-list"></i> Change order');
+
+            // destroy sortable funcionality
+            sortableTbody.sortable('destroy');
+
+            // restore old html into tbody
+            sortableTbody.html(sortableTbody.data('oldHtml'));
+
+            // hide "handle" for sorting, the icon in first column
+            sortableTbody.find('[data-action="sort"]').hide();
+
+            // hide "Save Order" button
+            $('[data-action="save-order"]').hide();
+
+        } else {
+
+            target.addClass('active');
+
+            // method html sets or gets html inside selected element
+            target.html('<i class="glyphicon glyphicon-remove"></i> Cancel');
+
+            // save tbody html before sorting under key "oldHtml" into its data
+            sortableTbody.data('oldHtml', sortableTbody.html());
+
+            // initialize sortable functionality
+            sortableTbody.sortable({
+                handle: '[data-action="sort"]'
+            });
+
+            // show "handle" for sorting, the icon in first column
+            sortableTbody.find('[data-action="sort"]').show();
+
+            // show "Save Order" button
+            $('[data-action="save-order"]').show();
+
+        }
+    });
+
+    $('[data-action="save-order"]').on('click', function (e) {
+
+        e.preventDefault();
+        e.stopPropagation();
+
         var coverSortedIds = $('#rows-table > tbody').sortable('toArray', {
             attribute: 'data-cover-id'
         });
-        
+
         var saveOrderForm = $('#save-order-form');
-        
+
         saveOrderForm.find('[name="sorted_ids_covers"]').val(coverSortedIds.join(','));
-        
+
         saveOrderForm.trigger('submit');
-        
-   });
-<?php $this->inlineScript()->captureEnd(); ?>  
+
+    });
+<?php $this->inlineScript()->captureEnd(); ?>
 </script>
 
