--- a/application/views/scripts/books/index.phtml
+++ b/application/views/scripts/books/index.phtml
@@ -5,7 +5,7 @@ $this->headTitle($this->sitemapPage['title']);
 ?>
         <main class="bookMain">
 			
-		<?php echo $this->breadCrumbsHtml($this->sitemapPage['id']);?>
+            <?php echo $this->breadCrumbsHtml($this->sitemapPage['id']);?>
 
             <!--******************************************
                      MAIN PRODUCTS-SORTING START
@@ -48,54 +48,30 @@ $this->headTitle($this->sitemapPage['title']);
 
                     <p class="firstTitle"><b>FILTER</b></p>
                     <div id="slider-range"></div>
-                    <p>
-                        <label for="amount">Price</label>
-                        <input type="text" id="amount" readonly style="border:0; color:#000;">
-                    </p>
                     <ul class="list-unstyled productCategories">    
-                        <li class="titleProduct"><a href="#">PRODUCT CATEGORIES</a>
-                        <li><a href="#">Books</a></li>
-                        <li><a href="#">Textbooks</a></li>
-                        <li><a href="#">Audiobooks</a></li>
-                        <li><a href="#">Magazines</a></li>
-                        <li><a href="#">Movies</a></li>
-                        <li><a href="#">Music</a></li>
-                        <li><a href="#">Games</a></li>
+                        <li class="titleProduct"><strong>BOOK CATEGORIES</strong><hr>
+                        <?php foreach ($this->categories as $category) {?>
+                            <li><?php echo $this->escape($category['title']);?></li>
+                        <?php }?>
                     </ul>
                     <ul class="list-unstyled productCategories">    
-                        <li class="titles"><a href="#">New Releases</a>
-                        <li><a href="#">Last 30 days <span class="priceReleases">100,358</span></a></li>
-                        <li><a href="#">Last 90 days <span class="priceReleases">100,358</span></a></li>
-                        <li><a href="#">Coming Soon <span class="priceReleasesLast">100,358</span></a></li>                       
+                        <li class="titleProduct"><strong>COVER</strong><hr>
+                        <?php foreach($this->covers as $cover) {?>
+                        <li><?php echo $this->escape($cover['title']);?> <span class="priceAuthor"></span></li>
+                        <?php }?>
                     </ul>
                     <ul class="list-unstyled productCategories">    
-                        <li class="titles"><a href="#">FORMAT</a>
-                        <li><a href="#">Paperback <span class="priceFormat">100,358</span></a></li>
-                        <li><a href="#">Hardcover <span class="priceFormat">100,358</span></a></li>
-                        <li><a href="#">Kindle Edition <span class="priceFormat">100,358</span></a></li>
-                        <li><a href="#">Audible Audtio Edition <span class="priceFormat">100,358</span></a></li>
-                        <li><a href="#">Printed Access Code <span class="priceFormat">100,358</span></a></li>
-                        <li><a href="#">Audio CD <span class="priceFormat">100,358</span></a></li> 
-                        <li><a href="#">Board Boak <span class="priceFormat">100,358</span></a></li>
+                        <li class="titles"><strong>AUTHOR</strong><hr>
+                        <?php foreach($this->authors as $author) {?>
+                        <li><?php echo $this->escape($author['name']);?> <span class="priceAuthor"></span></li>
+                        <?php }?>
                     </ul>
                     <ul class="list-unstyled productCategories">    
-                        <li class="titles"><a href="#">AUTHOR</a>
-							<?php foreach($this->authors as $author) {;?>
-								<li><a href="<?php echo $this->authorUrl($author);?>"><?php echo $this->escape($author['name']);?> <span class="priceAuthor">288</span></a></li>
-							<?php }?>
+                        <li class="titles"><strong>LANGUAGE</strong><hr>
+                        <?php foreach($this->languages as $language) {?>
+                        <li><?php echo $this->escape($language['title']);?> <span class="priceAuthor"></span></li>
+                        <?php }?>
                     </ul>
-                    <p><a href="#" class="arrowRightAuthor">See all <span class="fa fa-arrow-right"></span></a>  </p>
-                    <ul class="list-unstyled productCategories">    
-                        <li class="titles"><a href="#">LENGUAGE</a>
-                        <li><a href="#">ENGLISH <span class="priceAuthor">18,610,000</span></a></li>
-                        <li><a href="#">GERMAN <span class="priceAuthor">2,199,573</span></a></li>
-                        <li><a href="#">FRANCE <span class="priceAuthor">2,185,922</span></a></li>
-                        <li><a href="#">SPANISH <span class="priceAuthor">1,171,681</span></a></li>
-                        <li><a href="#">ITALY <span class="priceAuthor">804,936</span></a></li>
-                        <li><a href="#">UKRAINIAN Klein <span class="priceAuthor">910,814</span></a></li> 
-                        <li><a href="#">CHINESE <span class="priceAuthor">562,811</span></a></li>
-                    </ul>
-                    <p><a href="#" class="arrowRightAuthor">See all <span class="fa fa-arrow-right"></span></a>  </p>
                 </form>
             </section>
 			<hr>
@@ -105,30 +81,32 @@ $this->headTitle($this->sitemapPage['title']);
             <!--******************************************
                             MAIN BESTSELLERS START
              ******************************************-->
-			<div class="container">
-				<div class="bestsellers clearfix text-center">
-					<h2>All Books</h2>
-					<?php 
-						foreach($this->books as $book) {?>
-								<div class="books">
-									<figure class="center-block">
-										<a href="<?php echo $this->bookUrl($book);?>"><img src="<?php echo $this->bookImgUrl($book);?>" class="img-responsive"></a>
-									<?php if($book['sale'] == Application_Model_DbTable_CmsBooks::ON_SALE) {?>
-										<span class="sale">SALE</span>
-									<?php }?>
-									</figure>
-									<h4 class="down"><a href="<?php echo $this->bookUrl($book);?>"><b><?php echo $this->escape($book['title']);?></b></a></h4>
-									<p><span class="by">by</span>
-									<?php foreach($this->authors as $author) {
-										if($author['id'] == $book['author_id']) {
-										echo $author['name'];
-									}}?>
-									</p>
-									<p class="prise center-block"><?php echo $this->escape($book['price']);?><!--<a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a>--></p>
-								</div>
-					<?php }?>
-				</div>
-			</div>
+            <div class="container">
+                <div class="bestsellers clearfix text-center">
+                    <h2>All Books</h2>
+                    <?php foreach ($this->books as $book) { ?>
+                        <div class="books">
+                            <figure class="center-block">
+                                <a href="<?php echo $this->bookUrl($book); ?>"><img src="<?php echo $this->bookImgUrl($book); ?>" class="img-responsive"></a>
+                                <?php if ($book['sale'] == Application_Model_DbTable_CmsBooks::ON_SALE) { ?>
+                                    <span class="sale">SALE</span>
+                                <?php } ?>
+                            </figure>
+                            <h4 class="down"><a href="<?php echo $this->bookUrl($book); ?>"><b><?php echo $this->escape($book['title']); ?></b></a></h4>
+                            <p><span class="by">by</span>
+                                <?php
+                                foreach ($this->authors as $author) {
+                                    if ($author['id'] == $book['author_id']) {
+                                        echo $author['name'];
+                                    }
+                                }
+                                ?>
+                            </p>
+                            <p class="prise center-block"><?php echo $this->escape($book['price']); ?><!--<a href="#" class="shop"><span><span class="fa fa-plus"></span><span class="fa fa-shopping-basket"></span></span></a>--></p>
+                        </div>
+                    <?php } ?>
+                </div>
+            </div>
 
             <!--******************************************
                              MAIN BESTSELLERS END
